package Model.MovingPackage;

public enum Directions {
    UP, DOWN, LEFT, RIGHT
}
