package Model.MovingPackage;

public interface Movable {

    void move(double currentSpeed);
    void turnLeft();
    void turnRight();
}
